--- a/client/pom.xml
+++ b/client/pom.xml
@@ -83,7 +83,7 @@
 					<!-- MainClass in mainfest make a executable jar -->
 					<archive>
 					  <manifest>
-						<mainClass>org.apache.rocketmq.client.Producer</mainClass>
+						<mainClass>org.apache.rocketmq.client.Consumer</mainClass>
 					  </manifest>
 					</archive>
 
