--- a/client/pom.xml
+++ b/client/pom.xml
@@ -37,7 +37,7 @@
 	    <dependency>
 	    <groupId>com.oracle.substratevm</groupId>
 	    <artifactId>svm</artifactId>
-	    <version>1.0.0-rc16-dev</version>
+	    <version>1.0.0-rc16</version>
 	    </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
