--- a/mqtt/pom.xml
+++ b/mqtt/pom.xml
@@ -99,5 +99,9 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-broker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+        </dependency>
     </dependencies>
 </project>
