Support oms 1.0.0 consumer

--- a/pom.xml
+++ b/pom.xml
@@ -580,7 +580,7 @@
             <dependency>
                 <groupId>io.openmessaging</groupId>
                 <artifactId>openmessaging-api</artifactId>
-                <version>0.3.1-alpha</version>
+                <version>1.0.0-beta-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
