implements mqtt subscription persistence

--- a/store/pom.xml
+++ b/store/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>jna</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.rocksdb</groupId>
+            <artifactId>rocksdbjni</artifactId>
+            <version>5.5.1</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
