[ISSUE #1241]optimize the codes for issue that Suggestion about the third part dependency of the RocketMQ client.

--- a/filter/pom.xml
+++ b/filter/pom.xml
@@ -37,5 +37,9 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-srvutil</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
