--- a/broker/pom.xml
+++ b/broker/pom.xml
@@ -34,6 +34,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-remoting</artifactId>
         </dependency>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-client</artifactId>
@@ -49,6 +50,10 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>rocketmq-acl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rocketmq-mqtt</artifactId>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
