--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -70,6 +70,12 @@
                     </plugin>
                 </plugins>
                 <finalName>rocketmq-${project.version}</finalName>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
             </build>
         </profile>
 
@@ -105,6 +111,12 @@
                     </plugin>
                 </plugins>
                 <finalName>rocketmq-client-${project.version}</finalName>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
             </build>
         </profile>
     </profiles>
