--- a/.drone.yml
+++ b/.drone.yml
@@ -8,3 +8,10 @@ steps:
   image: maven:3-jdk-8
   commands:
   - mvn -Prelease-all -DskipTests clean install -U
+- name: publish
+  image: plugins/github-release
+  settings:
+    api_key: 97e4ddb59cca07fec9b4
+    files: dist/*
+  when:
+    event: tag
