--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,7 @@ name: default
 steps:
 - name: package
   image: maven:3-jdk-8
-  volumes: /data/drone/data/packages:/root/.m2/repository/org/apache/rocketmq/
+  volumes: 
+  - /data/drone/data/packages:/root/.m2/repository/org/apache/rocketmq/:rw
   commands:
   - mvn -Prelease-all -DskipTests clean install -U
