--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ name: default
 steps:
 - name: package
   image: maven:3-jdk-8
-  volumes: 
-    - /data/drone/:/root/:rw
+  volumes:
+  - /data/drone:/root/.m2/repository:rw
   commands:
   - mvn -Prelease-all -DskipTests clean install -U
