--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,10 @@ name: package
 
 steps:
 - name: package
+  volumes:
+  - name: persist
+    host: 
+      path: /data/drone/data/packages
   image: maven:3-jdk-8
   commands:
   - mvn -Prelease-all -DskipTests clean install -U
