--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,10 @@ workspace:
 pipeline:
   package:
     image: maven:3-jdk-8
+    volumes:
+    - name: package
+      host: 
+        path: /data/drone/data/packages
     commands:
     - mvn -Prelease-all -DskipTests clean install -U
     # pull: true
