--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,10 @@
-workspace:
-  base: /srv/drone-demo
-  path: .
-
+---
 pipeline:
   package:
     image: maven:3-jdk-8
     volumes:
     - name: package
-      host: 
-        path: /data/drone/data/packages
+      path: /root/.m2/
     commands:
     - mvn -Prelease-all -DskipTests clean install -U
     # pull: true
