--- a/.drone.yml
+++ b/.drone.yml
@@ -3,8 +3,9 @@ pipeline:
   package:
     image: maven:3-jdk-8
     volumes:
-    - name: package
-      path: /root/.m2/
+    - name: packages
+      host:
+        path: /data/drone/data/packages
     commands:
     - mvn -Prelease-all -DskipTests clean install -U
     # pull: true
