--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,5 @@
----
-workspace:
-  base: /root
-  path: ./packages
-
 pipeline:
-  package:
+  build:
     image: maven:3-jdk-8
     commands:
-    - mvn -Prelease-all -DskipTests clean install -U
-    # pull: true
-    #environment:
-    #  - KEY=VALUE
-    #secrets: [key1, key2]
+      - mvn -Prelease-all -DskipTests clean install -U
