--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,10 @@
-pipeline:
-  build:
-    image: maven:3-jdk-8
-    commands:
-      - mvn -Prelease-all -DskipTests clean install -U
+---
+kind: pipeline
+type: docker
+name: package
+
+steps:
+- name: package
+  image: maven:3-jdk-8
+  commands:
+  - mvn -Prelease-all -DskipTests clean install -U
