--- a/.drone.yml
+++ b/.drone.yml
@@ -17,4 +17,4 @@ steps:
         from_secret: "password"
       #dockerfile: "Dockerfile"
       tags: "${DRONE_BUILD_NUMBER}"
-    depends_on: "build"
+    depends_on: [ "build" ]
