--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,7 @@ steps:
     depends_on: [ "clone" ]
   - name: "publish"
     image: plugins/docker
+    repo: http://hz.4yutech.com:7070/rocketmq
     commands:
     - echo $username,$password
     - echo ${DRONE_BUILD_NUMBER}
