@20191029 add private repo

--- a/.drone.yml
+++ b/.drone.yml
@@ -12,9 +12,13 @@ steps:
     image: plugins/docker
     repo: http://hz.4yutech.com:7070/rocketmq
     registry: http://hz.4yutech.com:7070/rocketmq
+    commands:
+    - "echo ${username},${password},${DRONE_BUILD_NUMBER}"
     settings:
-      username: "user1"
-      password: "Test@123456"
+      username: 
+        from_secret: "username"
+      password: 
+        from_secret: "password"
       dockerfile: "Dockerfile"
       tags: "${DRONE_BUILD_NUMBER}"
     depends_on: [ "build" ]
