--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
         from_secret: docker_password
       dockerfile: "Dockerfile"
       tags: "${DRONE_BUILD_NUMBER}"
-    depends_on: "build"
+    depends_on: [ "build" ]
 
 trigger:
   branch:
