--- a/.drone.yml
+++ b/.drone.yml
@@ -12,16 +12,19 @@ steps:
     commands:
       - "mvn -Prelease-all -DskipTests clean install -U"
     depends_on: [ "compile" ]
-#   - name: "publish"
-#     image: plugins/docker
-#     repo: rocketmq
-# 
-#     settings:
-#       username: "user1"
-#       password: "Test@123456"
-#       dockerfile: "Dockerfile"
-#       tags: "${DRONE_BUILD_NUMBER}"
-#     depends_on: [ "build" ]
+  - name: "publish"
+    image: plugins/docker
+    repo: chinaloryu/rocketmq
+    commands:
+      - "echo ${username},${password}"
+    settings:
+      username: 
+        from_secret: docker_username
+      password: 
+	rom_secret: docker_password
+      # dockerfile: "Dockerfile"
+      # tags: "${DRONE_BUILD_NUMBER}"
+    depends_on: [ "build" ]
 
 trigger:
   branch:
