--- a/client/pom.xml
+++ b/client/pom.xml
@@ -62,5 +62,9 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>ons-trace-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
