--- a/pom.xml
+++ b/pom.xml
@@ -625,8 +625,11 @@
                 <artifactId>commons-validator</artifactId>
                 <version>1.6</version>
             </dependency>
-
-
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>ons-trace-core</artifactId>
+                <version>1.2.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
