--- a/openmessaging/pom.xml
+++ b/openmessaging/pom.xml
@@ -36,5 +36,13 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-acl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>ons-trace-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
