sample(openmessaging) add openmessaging clent sample

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -50,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-openmessaging</artifactId>
+            <artifactId>ons-client</artifactId>
             <version>4.6.1-SNAPSHOT</version>
         </dependency>
         <dependency>
