--- a/openmessaging/pom.xml
+++ b/openmessaging/pom.xml
@@ -24,8 +24,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rocketmq-openmessaging</artifactId>
-    <name>rocketmq-openmessaging ${project.version}</name>
+    <artifactId>ons-client</artifactId>
+    <name>ons-client ${project.version}</name>
 
     <dependencies>
         <dependency>
