--- a/example/pom.xml
+++ b/example/pom.xml
@@ -47,10 +47,11 @@
         <dependency>
             <groupId>io.openmessaging</groupId>
             <artifactId>openmessaging-api</artifactId>
+            <version>2.0.1-pubsub</version>
         </dependency>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-openmessaging</artifactId>
+            <artifactId>rocketmq-openmessaging-pubsub</artifactId>
             <version>4.7.1-SNAPSHOT</version>
         </dependency>
         <dependency>
